--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Labour Booking</title>
-    <link rel="stylesheet" href="/labor-booking-web-application\CSS files/index.css">
-    <link rel="stylesheet" href="/labor-booking-web-application\CSS files/header.css">
-    <link rel="stylesheet" href="/labor-booking-web-application\CSS files/footer.css">
+    <link rel="stylesheet" href="/labor-booking-web-application/CSS files/index.css">
+    <link rel="stylesheet" href="/labor-booking-web-application/CSS files/header.css">
+    <link rel="stylesheet" href="/labor-booking-web-application/CSS files/footer.css">
 </head>
 <body>
     <div class="header-placeholder"></div>
     <div class="main-content">
         <div class="banner">
             <!-- Wrap each image with its own hyperlink -->
-            <a href="/labor-booking-web-application\HTML files/Mason.html">
-                <img src="/labor-booking-web-application\Images/mason.jpg" alt="Mason Slide">
+            <a href="/labor-booking-web-application/HTML files/Mason.html">
+                <img src="/labor-booking-web-application/Images/mason.jpg" alt="Mason Slide">
             </a>
-            <a href="/labor-booking-web-application\HTML files/painter.html">
-                <img src="/labor-booking-web-application\Images/painter.jpg" alt="Painter Slide">
+            <a href="/labor-booking-web-application/HTML files/painter.html">
+                <img src="/labor-booking-web-application/Images/painter.jpg" alt="Painter Slide">
             </a>
-            <a href="/labor-booking-web-application\HTML files/plumber.html" class="active">
-                <img src="/labor-booking-web-application\Images/plumber.jpg" alt="Plumber Slide">
+            <a href="/labor-booking-web-application/HTML files/plumber.html" class="active">
+                <img src="/labor-booking-web-application/Images/plumber.jpg" alt="Plumber Slide">
             </a>
-            <a href="/labor-booking-web-application\HTML files/electrician.html">
-                <img src="/labor-booking-web-application\Images/electrician .jpg" alt="Electrician Slide">
+            <a href="/labor-booking-web-application/HTML files/electrician.html">
+                <img src="/labor-booking-web-application/Images/electrician .jpg" alt="Electrician Slide">
             </a>
-            <a href="/labor-booking-web-application\HTML files/carpenter.html">
-                <img src="/labor-booking-web-application\Images/carpanter.jpg" alt="Carpenter Slide">
+            <a href="/labor-booking-web-application/HTML files/carpenter.html">
+                <img src="/labor-booking-web-application/Images/carpanter.jpg" alt="Carpenter Slide">
             </a>
         </div>
         <div class="content">
@@ -35,34 +35,34 @@
         </div>
         <div class="sections">
             <div class="section">
-                <img src="/labor-booking-web-application\Images/plumber.svg" alt="Plumber">
+                <img src="/labor-booking-web-application/Images/plumber.svg" alt="Plumber">
                 <h3>Plumber</h3>
                 <p>Expert plumbers available for all your plumbing needs.</p>
-                <button><a href="/labor-booking-web-application\HTML files/plumber.html">Book Now</a></button>
+                <button><a href="/labor-booking-web-application/HTML files/plumber.html">Book Now</a></button>
             </div>
             <div class="section">
-                <img src="/labor-booking-web-application\Images/electrician.svg" alt="Electrician">
+                <img src="/labor-booking-web-application/Images/electrician.svg" alt="Electrician">
                 <h3>Electrician</h3>
                 <p>Skilled electricians for safe and efficient electrical work.</p>
-                <button><a href="/labor-booking-web-application\HTML files/electrician.html">Book Now</a></button>
+                <button><a href="/labor-booking-web-application/HTML files/electrician.html">Book Now</a></button>
             </div>
             <div class="section">
-                <img src="/labor-booking-web-application\Images/PAINTER.svg" alt="Painter">
+                <img src="/labor-booking-web-application/Images/PAINTER.svg" alt="Painter">
                 <h3>Painter</h3>
                 <p>Professional painters for residential and commercial projects.</p>
-                <button><a href="/labor-booking-web-application\HTML files/painter.html">Book Now</a></button>
+                <button><a href="/labor-booking-web-application/HTML files/painter.html">Book Now</a></button>
             </div>
             <div class="section">
-                <img src="/labor-booking-web-application\Images/carpenter.svg" alt="Carpenter">
+                <img src="/labor-booking-web-application/Images/carpenter.svg" alt="Carpenter">
                 <h3>Carpenter</h3>
                 <p>Experienced carpenters for all types of woodworking.</p>
-                <button><a href="/labor-booking-web-application\HTML files/carpenter.html">Book Now</a></button>
+                <button><a href="/labor-booking-web-application/HTML files/carpenter.html">Book Now</a></button>
             </div>
             <div class="section">
-                <img src="/labor-booking-web-application\Images/mason copy.svg" alt="Mason">
+                <img src="/labor-booking-web-application/Images/mason copy.svg" alt="Mason">
                 <h3>Mason</h3>
                 <p>Skilled masons for construction and masonry work.</p>
-                <button><a href="/labor-booking-web-application\HTML files/Mason.html">Book Now</a></button>
+                <button><a href="/labor-booking-web-application/HTML files/Mason.html">Book Now</a></button>
             </div>
         </div>
     </div>
@@ -92,6 +92,6 @@
     </script>
 
     <div class="footer-placeholder"></div>
-    <script src="/labor-booking-web-application\Java Script files/script.js"></script>
+    <script src="/labor-booking-web-application/Java Script files/script.js"></script>
 </body>
 </html>
