--- a/HTML files/header.html
+++ b/HTML files/header.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../Images/logo.png" alt="Logo">
+            <img src="/labor-booking-web-application/Images/logo.png" alt="Logo">
         </div>
         <div class="menu-icon" id="menuIcon">&#x2630;</div> <!-- Menu icon (hamburger) -->
         <nav>
