--- a/HTML files/footer.html
+++ b/HTML files/footer.html
@@ -10,7 +10,7 @@
 <footer>
   <div class="footer-content">
     <div class="footer-logo">
-      <img src="..\Images/logo.png" alt="Logo">
+      <img src="/labor-booking-web-application/Images/logo.png" alt="Logo">
     </div>
     <div class="footer-social">
 
